// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Message /> should match snapshot with different baseColors 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0.125rem 0.375rem rgba(31, 26, 24, 0.12);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 1rem;
  border-color: #F1694B;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  margin-top: 1.125rem;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #EB5757;
  border-radius: 0.625rem;
  height: 1.25rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1.25rem;
}

.emotion-6 .i-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  display: grid;
  gap: 0.25rem;
  margin: 0 0 0 1rem;
}

.emotion-10 {
  font-size: 14px;
  font-weight: bold;
  margin: 0;
}

.emotion-12 {
  font-size: 12px;
  margin: 0;
}

.emotion-14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-16 {
  background-color: rgba(0,0,0,0);
  color: #F1694B;
  border-radius: 3rem;
  border: none;
  cursor: pointer;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  padding: 0.28rem 0.75rem;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.emotion-16:hover {
  box-shadow: 0 0 0.25rem transparent;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.emotion-16:disabled {
  background-color: transparent;
}

.emotion-16:disabled:hover {
  box-shadow: 0 0 0.25rem transparent;
}

.emotion-18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.75rem;
  margin-left: 1rem;
  width: 0.75rem;
}

.emotion-18 svg {
  height: 0.75rem;
  width: 0.75rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <span
            class="i-icon i-icon-close"
          >
            <svg
              fill="none"
              height="10"
              viewBox="0 0 48 48"
              width="10"
            >
              <path
                d="M8 8L40 40"
                stroke="#fff"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="8"
              />
              <path
                d="M8 40L40 8"
                stroke="#fff"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="8"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <p
          class="emotion-10 emotion-11"
        >
          dummy message
        </p>
        <p
          class="emotion-12 emotion-13"
        >
          dummy message
        </p>
      </div>
    </div>
    <div
      class="emotion-14 emotion-15"
    >
      <button
        class="emotion-16 emotion-17"
      >
        Dummy button
      </button>
      <div
        class="emotion-18 emotion-19"
      >
        <span
          class="i-icon i-icon-close"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 48 48"
            width="1em"
          >
            <path
              d="M8 8L40 40"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
            <path
              d="M8 40L40 8"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Message /> should match snapshot with different baseColors 2`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0.125rem 0.375rem rgba(31, 26, 24, 0.12);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 1rem;
  border-color: #EB5757;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  margin-top: 1.125rem;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #EB5757;
  border-radius: 0.625rem;
  height: 1.25rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1.25rem;
}

.emotion-6 .i-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  display: grid;
  gap: 0.25rem;
  margin: 0 0 0 1rem;
}

.emotion-10 {
  font-size: 14px;
  font-weight: bold;
  margin: 0;
}

.emotion-12 {
  font-size: 12px;
  margin: 0;
}

.emotion-14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-16 {
  background-color: rgba(0,0,0,0);
  color: #F1694B;
  border-radius: 3rem;
  border: none;
  cursor: pointer;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  padding: 0.28rem 0.75rem;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.emotion-16:hover {
  box-shadow: 0 0 0.25rem transparent;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.emotion-16:disabled {
  background-color: transparent;
}

.emotion-16:disabled:hover {
  box-shadow: 0 0 0.25rem transparent;
}

.emotion-18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.75rem;
  margin-left: 1rem;
  width: 0.75rem;
}

.emotion-18 svg {
  height: 0.75rem;
  width: 0.75rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <span
            class="i-icon i-icon-close"
          >
            <svg
              fill="none"
              height="10"
              viewBox="0 0 48 48"
              width="10"
            >
              <path
                d="M8 8L40 40"
                stroke="#fff"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="8"
              />
              <path
                d="M8 40L40 8"
                stroke="#fff"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="8"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <p
          class="emotion-10 emotion-11"
        >
          dummy message
        </p>
        <p
          class="emotion-12 emotion-13"
        >
          dummy message
        </p>
      </div>
    </div>
    <div
      class="emotion-14 emotion-15"
    >
      <button
        class="emotion-16 emotion-17"
      >
        Dummy button
      </button>
      <div
        class="emotion-18 emotion-19"
      >
        <span
          class="i-icon i-icon-close"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 48 48"
            width="1em"
          >
            <path
              d="M8 8L40 40"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
            <path
              d="M8 40L40 8"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Message /> should match snapshot with different baseColors 3`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0.125rem 0.375rem rgba(31, 26, 24, 0.12);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 1rem;
  border-color: #FF9900;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  margin-top: 1.125rem;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #EB5757;
  border-radius: 0.625rem;
  height: 1.25rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1.25rem;
}

.emotion-6 .i-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  display: grid;
  gap: 0.25rem;
  margin: 0 0 0 1rem;
}

.emotion-10 {
  font-size: 14px;
  font-weight: bold;
  margin: 0;
}

.emotion-12 {
  font-size: 12px;
  margin: 0;
}

.emotion-14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-16 {
  background-color: rgba(0,0,0,0);
  color: #F1694B;
  border-radius: 3rem;
  border: none;
  cursor: pointer;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  padding: 0.28rem 0.75rem;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.emotion-16:hover {
  box-shadow: 0 0 0.25rem transparent;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.emotion-16:disabled {
  background-color: transparent;
}

.emotion-16:disabled:hover {
  box-shadow: 0 0 0.25rem transparent;
}

.emotion-18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.75rem;
  margin-left: 1rem;
  width: 0.75rem;
}

.emotion-18 svg {
  height: 0.75rem;
  width: 0.75rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <span
            class="i-icon i-icon-close"
          >
            <svg
              fill="none"
              height="10"
              viewBox="0 0 48 48"
              width="10"
            >
              <path
                d="M8 8L40 40"
                stroke="#fff"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="8"
              />
              <path
                d="M8 40L40 8"
                stroke="#fff"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="8"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <p
          class="emotion-10 emotion-11"
        >
          dummy message
        </p>
        <p
          class="emotion-12 emotion-13"
        >
          dummy message
        </p>
      </div>
    </div>
    <div
      class="emotion-14 emotion-15"
    >
      <button
        class="emotion-16 emotion-17"
      >
        Dummy button
      </button>
      <div
        class="emotion-18 emotion-19"
      >
        <span
          class="i-icon i-icon-close"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 48 48"
            width="1em"
          >
            <path
              d="M8 8L40 40"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
            <path
              d="M8 40L40 8"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Message /> should match snapshot with different baseColors 4`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0.125rem 0.375rem rgba(31, 26, 24, 0.12);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 1rem;
  border-color: #59BC6F;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  margin-top: 1.125rem;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #EB5757;
  border-radius: 0.625rem;
  height: 1.25rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1.25rem;
}

.emotion-6 .i-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  display: grid;
  gap: 0.25rem;
  margin: 0 0 0 1rem;
}

.emotion-10 {
  font-size: 14px;
  font-weight: bold;
  margin: 0;
}

.emotion-12 {
  font-size: 12px;
  margin: 0;
}

.emotion-14 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-16 {
  background-color: rgba(0,0,0,0);
  color: #F1694B;
  border-radius: 3rem;
  border: none;
  cursor: pointer;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  padding: 0.28rem 0.75rem;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.emotion-16:hover {
  box-shadow: 0 0 0.25rem transparent;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.emotion-16:disabled {
  background-color: transparent;
}

.emotion-16:disabled:hover {
  box-shadow: 0 0 0.25rem transparent;
}

.emotion-18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.75rem;
  margin-left: 1rem;
  width: 0.75rem;
}

.emotion-18 svg {
  height: 0.75rem;
  width: 0.75rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <span
            class="i-icon i-icon-close"
          >
            <svg
              fill="none"
              height="10"
              viewBox="0 0 48 48"
              width="10"
            >
              <path
                d="M8 8L40 40"
                stroke="#fff"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="8"
              />
              <path
                d="M8 40L40 8"
                stroke="#fff"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="8"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <p
          class="emotion-10 emotion-11"
        >
          dummy message
        </p>
        <p
          class="emotion-12 emotion-13"
        >
          dummy message
        </p>
      </div>
    </div>
    <div
      class="emotion-14 emotion-15"
    >
      <button
        class="emotion-16 emotion-17"
      >
        Dummy button
      </button>
      <div
        class="emotion-18 emotion-19"
      >
        <span
          class="i-icon i-icon-close"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 48 48"
            width="1em"
          >
            <path
              d="M8 8L40 40"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
            <path
              d="M8 40L40 8"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Message /> should not render title if prop is null 1`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 1rem;
  border-style: solid;
  border-width: 1px;
  box-shadow: 0 0.125rem 0.375rem rgba(31, 26, 24, 0.12);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding: 1rem;
  border-color: #F1694B;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-4 {
  margin-top: 1.125rem;
}

.emotion-6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #EB5757;
  border-radius: 0.625rem;
  height: 1.25rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1.25rem;
}

.emotion-6 .i-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-8 {
  display: grid;
  gap: 0.25rem;
  margin: 0 0 0 1rem;
}

.emotion-10 {
  font-size: 14px;
  margin: 0;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-14 {
  background-color: rgba(0,0,0,0);
  color: #F1694B;
  border-radius: 3rem;
  border: none;
  cursor: pointer;
  display: inline-block;
  font-size: 12px;
  font-weight: 600;
  padding: 0.28rem 0.75rem;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.emotion-14:hover {
  box-shadow: 0 0 0.25rem transparent;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.emotion-14:disabled {
  background-color: transparent;
}

.emotion-14:disabled:hover {
  box-shadow: 0 0 0.25rem transparent;
}

.emotion-16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0.75rem;
  margin-left: 1rem;
  width: 0.75rem;
}

.emotion-16 svg {
  height: 0.75rem;
  width: 0.75rem;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="emotion-6 emotion-7"
        >
          <span
            class="i-icon i-icon-close"
          >
            <svg
              fill="none"
              height="10"
              viewBox="0 0 48 48"
              width="10"
            >
              <path
                d="M8 8L40 40"
                stroke="#fff"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="8"
              />
              <path
                d="M8 40L40 8"
                stroke="#fff"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="8"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="emotion-8 emotion-9"
      >
        <p
          class="emotion-10 emotion-11"
        >
          dummy message
        </p>
      </div>
    </div>
    <div
      class="emotion-12 emotion-13"
    >
      <button
        class="emotion-14 emotion-15"
      >
        Dummy button
      </button>
      <div
        class="emotion-16 emotion-17"
      >
        <span
          class="i-icon i-icon-close"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 48 48"
            width="1em"
          >
            <path
              d="M8 8L40 40"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
            <path
              d="M8 40L40 8"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="4"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
